--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.1",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
     "sweetalert2": "^11.7.32",
